--- a/page.html
+++ b/page.html
@@ -10,9 +10,19 @@
         <h1> Salutation voyageur! Voici le choipeaux gangsta! </h1>
         <p> Et voilà le premier paragraphe ;) </p>
         <aside>
-            <img src="image/choipeaux.jpg", alt="Choipeaux" />
-            <img src="image/1f913.png", alt="Nerd"/>
+            <img src="image/shield_gry.gif", alt="gryffondor" />
+            <img src="image/shield_huf.gif", alt="hufllpuff"/>
+            <img src="image/shield_rav.gif", alt="ravenclaw" />
+            <img src="image/shield_sly.gif", alt="serpentard"/>
         </aside>
+        <script src="/brython.js">
+
+        </script>
+        <button id="bouton_réponse" value=5> Bouton test</button>
     </body>
+
+
+
+
 
 </html>
