--- a/2emepage.html
+++ b/2emepage.html
@@ -23,7 +23,7 @@
     <button id="button1">Créer le questionnaire</button>
     <button id="button2">Changer de page?</button>
     <script>
-        document.getElementById("button2").innerHTML = "3emepage.html"
+        document.getElementById("button2").innerHTML = "2.html"
         document.getElementById('button1').addEventListener('click', function() {
             // Charger le fichier CSV et effectuer les calculs
             // Remplacez cette partie par le code nécessaire pour charger le fichier CSV, extraire les données et effectuer les calculs
