--- a/page.html
+++ b/page.html
@@ -11,11 +11,9 @@
         <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/brython@3.11.0/brython_stdlib.js">
         </script>
-        <script type="text/javascript"
-        src="vfinal.py">
-        </script>
+
     </head>
-    <body>
+    <body onload="brython()">
         <h1> Salutation voyageur! Voici le choipeaux gangsta! </h1>
         <p> Et voilà le premier paragraphe ;) </p>
         <aside>
@@ -25,18 +23,17 @@
             <img src="image/shield_sly.gif", alt="serpentard"/>
         </aside>
         <p>
-        
+            <button id="button1">cliquez</button>
+            
         </p>
-        <button id="button1">click</button>
-        <script type="text/python">
-            src="code.py"   
+        <script type="text/python">  
             from code import *
             from browser import document, html
+            document <= html.P("Tst")
             def affichage(ev):
-                document["aaa"].textContent = questions
+                print(questions)
             document["button1"].bind("click", affichage)
         </script>
-        <p id="aaa">coucou</p>
     </body>
 
 </html>
