--- a/page.html
+++ b/page.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/harry-p" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title> Le choipeaux gangsta </title>
         <meta charset="utf-8">
@@ -11,9 +13,9 @@
         <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/brython@3.11.0/brython_stdlib.js">
         </script>
-
     </head>
     <body onload="brython()">
+
         <h1> Salutation voyageur! Voici le choipeaux gangsta! </h1>
         <aside>
             <img src="image/shield_gry.gif", alt="gryffondor" />
